# Buddy

./: .gitignore  Cargo.toml  README.md  package-lock.json
app/: package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
app/src/: App.tsx  index.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: calendar_bridge.rs  calendar_reminder_checker.rs  coder_bridge.rs  coder_tool.rs  codex_orchestrator.rs  codex_runner.rs  cursor_runner.rs  intelligence_hooks.rs  lib.rs  logging.rs  main.rs  memory_api.rs  memory_extraction.rs  memory_tools.rs  orchestrator.rs  secrets.rs  spark_checker.rs  state.rs  terminal.rs
app/src-tauri/src/commands/: mod.rs
app/src-tauri/src/services/: mod.rs
app/src/__tests__/calendar/: EventDetailsDrawer.test.tsx  (+2 more)
app/src/components/: ChatInput.tsx  ChatWindow.tsx  CodeAgentInput.tsx  CodeAgentWindow.tsx  CodePreview.tsx  CodeTerminal.tsx  FormattedText.tsx  Header.tsx  MessageBubble.tsx  PageTransition.tsx  Sidebar.tsx
app/src/hooks/: useDismissible.ts
app/src/lib/: api.ts
app/src/pages/: Calendar.tsx  CodeAgent.tsx  Dashboard.tsx  Settings.tsx  Spark.tsx
app/src/stores/: useAppStore.ts  useCalendarNotificationStore.ts  useCalendarStore.ts  useChatStore.ts  useCodeAgentStore.ts  useConversationStore.ts  useLifestyleStore.ts  useSettingsStore.ts  useSparkStore.ts
brain/: context.py  embeddings.py  main.py  mlx_client.py  parser.py  requirements.txt  test_parser_calendar.py
brain/prompts/: __init__.py  memory.py
brain/scripts/: start_mlx.sh  test_embeddings.py  test_mlx.py
clarification/: Cargo.toml
clarification/src/: lib.rs
core/: Cargo.toml
core/src/: error.rs  json.rs  lib.rs  path_guard.rs  plugin.rs  registry.rs  runner.rs  schema.rs  session.rs  tool.rs
database/: Cargo.toml
database/migrations/: 001_init.sql  002_memory.sql  003_storage_improvements.sql  004_intelligence.sql  005_knowledge_graph.sql  006_learning.sql  007_workspace.sql  008_sparks.sql  009_agents_and_audit.sql  010_calendar.sql  011_calendar_columns.sql  012_buddy_calendar.sql  013_lifestyle_schedule.sql  014_memory_runtime_state.sql  015_calendar_scheduling.sql
database/src/: lib.rs
intelligence/: Cargo.toml
intelligence/src/: confidence.rs  context_builder.rs  error.rs  knowledge_graph.rs  learning.rs  lib.rs  maintenance.rs  search_text.rs  service.rs  workspace.rs
intelligence/src/semantic/: mod.rs  sqlite.rs  types.rs
memory/: Cargo.toml
memory/src/: error.rs  events.rs  lib.rs  manager.rs  memory_trait.rs  types.rs
memory/src/modules/: conversation.rs  decision.rs  error.rs  handover.rs  mod.rs  preference.rs  project.rs  reflection.rs  tool.rs  working.rs
memory/src/storage/: mod.rs  sqlite.rs
personality/: Cargo.toml
personality/src/: lib.rs
plugins/: Cargo.toml
plugins/src/: calendar.rs  echo.rs  external.rs  fs.rs  lib.rs  manager.rs  spark.rs
plugins/tests/: calendar_tools.rs  echo_tool.rs  plugin_manager.rs
shared/: ports.json
shared/schemas/: memory.json  plan.json
(+15 files in other folders)
