[package]
name = "buddy-intelligence"
version.workspace = true
edition.workspace = true

[dependencies]
buddy-database = { path = "../database" }
buddy-memory = { path = "../memory" }
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
