[package]
name = "buddy-memory"
version.workspace = true
edition.workspace = true

[dependencies]
buddy-database = { path = "../database" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
