[package]
name = "buddy-plugins"
version.workspace = true
edition.workspace = true

[dependencies]
buddy-core = { path = "../core" }
buddy-database = { path = "../database" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
buddy-core = { path = "../core" }
buddy-database = { path = "../database" }
uuid = { version = "1", features = ["v4"] }

[[test]]
name = "echo_tool"
path = "tests/echo_tool.rs"
