[package]
name = "buddy-app"
version.workspace = true
edition.workspace = true
description = "Buddy - local-first AI desktop assistant"
authors = ["liamgk"]

[lib]
name = "buddy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
buddy-core = { path = "../../core" }
buddy-database = { path = "../../database" }
buddy-memory = { path = "../../memory" }
buddy-intelligence = { path = "../../intelligence" }
buddy-plugins = { path = "../../plugins" }
dirs = "6"
